feat: get document by its elastic generated id (#20)
* feat: get document by its elastic generated id

* fix: swagger, remove console log, add openapi validation
