# src/routers/indexes.ts
@@ -11,6 +11,7 @@ indexesRouter.get('/:name', validate, controller.getOne.bind(controller));
 indexesRouter.post('/', validate, controller.create.bind(controller));
 indexesRouter.delete('/:name', validate, controller.delete.bind(controller));
 
+indexesRouter.get('/:name/document/:documentId', validate, controller.getDoucmentById.bind(controller));
 indexesRouter.post('/:name/document', validate, controller.addDocument.bind(controller));
 indexesRouter.put('/:name/document', controller.updateDocument.bind(controller));
 indexesRouter.delete('/:name/document/:documentId', validate, controller.deleteDocument.bind(controller));
